fixing bug on smaller screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,6 +31,14 @@ body {
 
 }
 
+.event-text {
+  // word-wrap: break-word;
+  @media (min-width:992px){
+    font-size: 1.5vw;
+
+  }
+}
+
 h1,h2,h3,h4,h5 {
     font-family: "Biko", Helvetica, sans-serif;
 
@@ -484,6 +492,7 @@ section.apply{
     header {
         padding-top: 2em;
     }
+
 }
 
 
